--- a/src/view/product.ejs
+++ b/src/view/product.ejs
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Aroma Shop - Home</title>
+  <base href="/">
 	<link rel="icon" href="img/Fevicon.png" type="image/png">
   <link rel="stylesheet" href="vendors/bootstrap/bootstrap.min.css">
   <link rel="stylesheet" href="vendors/fontawesome/css/all.min.css">
@@ -13,11 +14,11 @@
   <link rel="stylesheet" href="vendors/owl-carousel/owl.theme.default.min.css">
   <link rel="stylesheet" href="vendors/owl-carousel/owl.carousel.min.css">
 
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-  <!--================ Start Header Menu Area =================-->
-	<header class="header_area">
+   <!--================ Start Header Menu Area =================-->
+   <header class="header_area">
     <div class="main_menu">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
@@ -31,37 +32,13 @@
           <div class="collapse navbar-collapse offset" id="navbarSupportedContent">
             <ul class="nav navbar-nav menu_nav ml-auto mr-auto">
               <li class="nav-item active"><a class="nav-link" href="index">Home</a></li>
-              <li class="nav-item submenu dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                  aria-expanded="false">Shop</a>
-                <ul class="dropdown-menu">
-                  <li class="nav-item"><a class="nav-link" href="category.html">Shop Category</a></li>
-                  <li class="nav-item"><a class="nav-link" href="single-product.html">Product Details</a></li>
-                  <li class="nav-item"><a class="nav-link" href="checkout.html">Product Checkout</a></li>
-                  <li class="nav-item"><a class="nav-link" href="confirmation.html">Confirmation</a></li>
-                  <li class="nav-item"><a class="nav-link" href="cart.html">Shopping Cart</a></li>
-                </ul>
-							</li>
-              <li class="nav-item submenu dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                  aria-expanded="false">Blog</a>
-                <ul class="dropdown-menu">
-                  <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-                  <li class="nav-item"><a class="nav-link" href="single-blog.html">Blog Details</a></li>
-                </ul>
-							</li>
-							<li class="nav-item submenu dropdown">
-                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-                  aria-expanded="false">Pages</a>
-                <ul class="dropdown-menu">
-                  <li class="nav-item"><a class="nav-link" href="login.html">Login</a></li>
-                  <li class="nav-item"><a class="nav-link" href="register.html">Register</a></li>
-                  <li class="nav-item"><a class="nav-link" href="tracking-order.html">Tracking</a></li>
-                </ul>
-              </li>
-              <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+              <li class="nav-item"><a class="nav-link" href="/product">Add Product</a></li>
+              <li class="nav-item"><a class="nav-link" href="/product/manage">Manage Product</a></li>
+              <li class="nav-item"><a class="nav-link" href="/product/view">Products</a></li>
+              <li class="nav-item"><a class="nav-link" href="product/cart">Cart</a></li>
+              <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
+              <li class="nav-item"><a class="nav-link" href="index">LogOut</a></li>
             </ul>
-
             <ul class="nav-shop">
               <li class="nav-item"><button><i class="ti-search"></i></button></li>
               <li class="nav-item"><button><i class="ti-shopping-cart"></i><span class="nav-shop__circle">3</span></button> </li>
@@ -73,7 +50,6 @@
     </div>
   </header>
 	<!--================ End Header Menu Area =================-->
-
   <main class="site-main">
     
     <!--================ Hero banner start =================-->
@@ -107,9 +83,15 @@
                 <div class="col-md-12 form-group">
                   <div class="row">
                     <div class="col">
+                        <select name="size"  id="size" size="1">
+                          <option value="select_size">- - Select Size - -</option>
+                            <% for(var i=3;i<=10;i++){%>
+                              <option value="<%= i%>"><%= i%></option>
+                            <%}%>
+                          </select>
                     </div>
                     <div class="col">
-                        <select name="brand" class="form-control">
+                        <select name="brand" class="form-control" >
                             <option value="Adidas" name="">Adidas</option>
                             <option value="Nike" name="" >Nike</option>
                             <option value="Puma" name="">Puma</option>
@@ -118,14 +100,6 @@
                     </div>
                   </div>
                  </div>
-                  <div class="col-md-12 form-group">
-                    
-                    <select name="size"  id="size" size="3">
-                      <% for(var i=3;i<=10;i++){%>
-                        <option value="<%= i%>"><%= i%></option>
-                      <%}%>
-                    </select>
-                  </div>
                   <div class="col-md-12 form-group">
                       <input type="text" class="form-control" id="price" name="price" placeholder="Price" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Price'">
                   </div>
